corrected change history table overflow

--- a/Web/Edubase.Web.UI/Assets/Sass/GiasModules/_gias-tables.scss
+++ b/Web/Edubase.Web.UI/Assets/Sass/GiasModules/_gias-tables.scss
@@ -200,10 +200,12 @@
     }
   }
 
-  //.govuk-table__cell,
-  //.govuk-table__header {
-  //  word-break: break-word;
-  //}
+  .govuk-table__body {
+    .govuk-table__cell,
+    .govuk-table__header {
+      word-break: break-word;
+    }
+  }
 
   .gias-summary-list {
     @include govuk-font(14)
